--- a/frontend/src/bootstrapShizzle/index.html
+++ b/frontend/src/bootstrapShizzle/index.html
@@ -11,7 +11,7 @@
     <title>ShapeSlate</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-ligh p-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,26 +41,19 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <input class="form-control mr-sm-2" type="text" placeholder="username">
+          <input class="form-control mr-sm-2" type="password" placeholder="password">
+          <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">Login</button>
         </form>
       </div>
     </nav>
     <div class="p-0 container-fluid no-gutters">
       <div class="row no-gutters">
-        <div class="col-sm-8 bg-success">
+        <div class="col-sm-9 bg-success">
           <p>Users:</p>
         </div>
-        <div class="col-sm-1 bg-danger">
-          <p>Session:</p>
-        </div>
         <div class="col-sm-3 bg-primary">
-          3 of 3
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-sm-9 bg-warning">
-          1 of 3
+          <p>Users:</p>
         </div>
       </div>
     </div>
